css/style.css
/* common CSS Start */

@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap");
html {
	scroll-behavior: smooth;
}
body {
	font-family: sans-serif;

	font-size: 16px;
	color: #292640;
}

/* common CSS ends*/
/* Header Start */
.header {
	padding-bottom: 40px;
}
.container {
	width: 80%;
	margin: 0px auto;
	overflow: hidden;
	/* border: 2px red solid; */
}

.logo {
	width: 14%;
	/* border: 1px pink solid; */
	float: left;
}
.logo img {
	width: 100%;
	padding-top: 2px;
}

/* .main-menu {
	overflow: hidden;
} */

.menu {
	width: 85%;
	/* border: 1px rgb(17, 12, 13) solid; */
	float: right;
}

.menu-bar {
	width: 70%;
	float: left;
	/* border: 1px skyblue solid; */
}

.menu-list li {
	list-style: none;
	display: inline-block;
	margin: 0;
	padding: 0px 0px;
}

.menu-list li a {
	font-weight: 700;
	text-decoration: none;
	color: #434057;
	padding: 0px 30px;
}
.menu-list li a:first-child {
	padding-left: 0px;
}

.call-button {
	float: right;
	/* border: 1px skyblue solid; */
}
#call-button {
	width: 200px;
	height: 52px;
	background-color: #ff6162;

	font-weight: 700;
	border-radius: 5px;
	border: solid #ff6162 1px;
}
#call-button a {
	text-decoration: none;
	color: #ffffff;
}
/* header end */

/* banner section starts  */
.banner {
	padding-top: 80px;
	/* border: #292640 solid; */
}
.banner-text {
	width: 50%;
	float: left;
	/* padding-top: 20px; */
	/* border: #292640 solid; */
	box-sizing: border-box;

	font-size: 35px;
}
.banner-heading {
	font-size: 50px;
	margin: 0;
	padding: 48px 100px 10px 20px;
}
.banner-description {
	font-size: 18px;
	line-height: 20px;
	color: #a2a4bf;
	font-weight: 600px;
	padding: 0px 20px 0 20px;
}
.banner-image {
	width: 50%;
	float: right;
	padding-left: 20px;
	box-sizing: border-box;
}
.banner-image img {
	width: 100%;
}
.banner-icon {
	padding-left: 20px;
}
/* banner sections ends */

/* demo section starts */
#demo-container {
	width: 97%;
	padding-top: 250px;
}
.demo-text {
	text-align: center;
}
.demo-heading {
	font-family: sans-serif;
	font-size: 30px;
	font-weight: 700px;
	text-align: center;
}
.demo-paragraph {
	padding: 0px 400px 20px 400px;
	font-family: serif;
	font-style: italic;
	font-size: 18px;
	color: #72808e;
	font-weight: 700px;
	text-align: center;
}

.demo-items {
	width: 24%;
	box-sizing: border-box;
	float: left;
	margin-right: 1%;

	/* transition-duration: 0.33s; */
	transition-delay: 0.1s;
}
.demo-items img {
	width: 100%;
	opacity: 0.8;
}
.demo-items img:hover {
	opacity: 1;
}
.demo-captions {
	font-size: 18px;
	text-align: center;
	color: #434749;
}

/* demo section ends */

/* features section start */
.features {
	padding-top: 250px;
}

.row {
	margin: 30px 15%;
	/* border: black solid; */
	overflow: hidden;
	box-sizing: border-box;
}

.feature-card {
	width: 30.2%;
	float: left;
	margin: 0 15px;

	background-color: #f5f5f5;
	border-radius: 8px;
	box-sizing: border-box;
	text-align: center;
}
.feature-card:first-child {
	margin-left: 15px;
}
.feature-card:last-child {
	margin-right: 15px;
}
.feature-image {
	padding: 20px 0;
}
.feature-card h2 {
	font-size: 12px;
}
.feature-card p {
	font-size: 10px;
}
.feature-card h2,
.feature-card p {
	text-align: center;
}

/* features section ends */

/* footer section start */
footer {
	text-align: center;
	background-color: #292640;
}
footer h2 {
	font-size: 45px;
	padding: 80px 450px 35px 450px;
}

footer h2,
footer p {
	color: #ffffff;
}
footer img {
	display: block;
	margin: 0 auto;
	padding: 25px 0;
}

/* footer section end */

